# palinter

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  main  makefile  package.json  test
.cargo/: config.toml
docs/: test_cases.md
drafts/: config_spec.ts  desing.md  modules_graph.md  test-app.md  test.ts  test2.ts  v0_config_spec.ts
npm/: package.json  pnpm-lock.yaml  tsconfig.json
npm/src/: main.ts
projects_test/: jestor_store_folder.yaml
projects_test/project_1/: palinter.yaml
src/: .internal_config.rs.pending-snap  analyse_ts_deps.rs  analyze_ts_deps.rs  check_files.rs  check_folders.rs  cli.rs  config.rs  config.schema.json  expect_checks.rs  internal_config.rs  load_folder_structure.rs  load_folder_tree.rs  main.rs  parse_config_file.rs  test_config.rs  test_utils.rs  utils.rs
src/analyze_ts_deps/: .extract_file_content_imports.rs.pending-snap  .modules_graph.rs.pending-snap  circular_deps.rs  extract_file_content_exports.rs  extract_file_content_imports.rs  modules_graph.rs  tests.rs  ts_checks.rs
src/check_files/: tests.rs
src/check_folders/: checks.rs  tests.rs
src/fixtures/: config1.json
src/snapshots/: palinter__analyze_ts_deps__tests__get_project_files_deps_info_test.snap  palinter__analyze_ts_deps__tests__get_project_files_deps_info_test_2.snap  palinter__analyze_ts_deps__tests__project_with_circular_deps.snap  palinter__config__tests__parse_config_works.snap  palinter__load_folder_structure__tests__analyze_content_of_files_types.snap  palinter__load_folder_structure__tests__ignore_folders.snap  palinter__load_folder_structure__tests__ignore_unconfigured_folder.snap  palinter__load_folder_tree__tests__analyze_content_of_files_types.snap  palinter__load_folder_tree__tests__ignore_folders.snap  (+2 more)
src/test_cases/: example.md  (+25 more)
(+50 files in other folders)
