[package]
name = "palinter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
convert_case = "0.6.0"
globset = "0.4.10"
insta = "1.28.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"

[profile.dev]
opt-level = 0
incremental = true
split-debuginfo = "unpacked"
codegen-units = 512
