[package]
name = "palinter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo"] }
colored = "2.0.0"
convert_case = "0.6.0"
globset = "0.4.10"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"
lazy_static = "1.4.0"
indexmap = "1.9.2"
jsonschema = "0.18.1"

[profile.dev]
opt-level = 0
incremental = true
split-debuginfo = "unpacked"
codegen-units = 512

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
pretty_assertions = "1.3.0"
