[package]
name = "palinter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "cargo"] }
colored = "3.1.1"
convert_case = "0.11.0"
globset = "0.4.18"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_norway = "0.9.42"
lazy_static = "1.5.0"
indexmap = "2.13.0"
jsonschema = "0.45.0"

[profile.dev]
opt-level = 0
incremental = true
split-debuginfo = "unpacked"
codegen-units = 512

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
pretty_assertions = "1.4.1"
